# TDIE

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/api/: bias.py  fingerprint.py  poison.py  tdie.py  train.py  validate.py
backend/engines/: bias_engine.py  fingerprint_engine.py  poison_detector.py  provenance.py  quality_checker.py  schema_validator.py  tdie_scorer.py  training_gate.py
backend/utils/: data_loader.py  hash_utils.py  logger.py  pdf_export.py
data/: baseline.json
docs/: api.md  architecture.md  ci_cd.md  fairness.md  lab_manual.md  poisoning_primer.md  provenance.md  threat_models.md
frontend/: dashboard.js  index.html  styles.css
logs/: README.md
provenance/: README.md
tests/: test_engines_unit.py  test_tdie.py
