[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["logs", "provenance"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

